template/qwen2.5-coder:7b/row_30_update_5_template_20260306_091438.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: MyInternetGateway

  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !Ref 'AWS::AvailabilityZones']
      Tags:
        - Key: Name
          Value: MySubnet1

  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !Ref 'AWS::AvailabilityZones']
      Tags:
        - Key: Name
          Value: MySubnet2

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: MyRouteTable

  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref RouteTable

  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MySecurityGroup
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: MySecurityGroup

  Ec2Instance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0c55b159cbfafe1f0
      InstanceType: t2.micro
      SubnetId: !Ref Subnet1
      SecurityGroupIds:
        - !Ref SecurityGroup
      KeyName: MyKeyPair
      Tags:
        - Key: Name
          Value: MyInstance1

  Ec2Instance2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0c55b159cbfafe1f0
      InstanceType: t2.micro
      SubnetId: !Ref Subnet2
      SecurityGroupIds:
        - !Ref SecurityGroup
      KeyName: MyKeyPair
      Tags:
        - Key: Name
          Value: MyInstance2

  Ec2InstanceIds:
    Type: AWS::CloudFormation::Init
    Properties:
      configSets:
        default:
          - main
      config:
        main:
          commands:
            01-start-instance1:
              command: /usr/bin/systemctl start my-instance1
            02-start-instance2:
              command: /usr/bin/systemctl start my-instance2

  CloudWatchAlarm1:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: MyAlarm1
      ComparisonOperator: GreaterThanThreshold
      EvaluationPeriods: 1
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      Period: 300
      Statistic: Average
      Threshold: 70
      AlarmActions:
        - !Ref CloudWatchAlarmNotification
      Dimensions:
        - Name: InstanceId
          Value: !Ref Ec2Instance1

  CloudWatchAlarm2:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: MyAlarm2
      ComparisonOperator: GreaterThanThreshold
      EvaluationPeriods: 1
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      Period: 300
      Statistic: Average
      Threshold: 70
      AlarmActions:
        - !Ref CloudWatchAlarmNotification
      Dimensions:
        - Name: InstanceId
          Value: !Ref Ec2Instance2

  CloudWatchAlarmNotification:
    Type: AWS::SNS::Topic
    Properties:
      TopicName: MyAlarmNotification

Outputs:
  VPCId:
    Description: The ID of the VPC
    Value: !Ref VPC
  Subnet1Id:
    Description: The ID of Subnet 1
    Value: !Ref Subnet1
  Subnet2Id:
    Description: The ID of Subnet 2
    Value: !Ref Subnet2
  Ec2Instance1Id:
    Description: The ID of EC2 Instance 1
    Value: !Ref Ec2Instance1
  Ec2Instance2Id:
    Description: The ID of EC2 Instance 2
    Value: !Ref Ec2Instance2
